# python-data-analysis

./: README.md  pyproject.toml  requirements.txt
data/: sample_data.csv
notebooks/Numpy/: スライス操作.ipynb  ブールインデックスによる条件付き操作.ipynb  ランダム配列の作成.ipynb  乱数の固定.ipynb  加減乗除.ipynb  演習.ipynb  配列.ipynb  配列のインデックス操作.ipynb  配列のブロードキャスト.ipynb  配列の形状変化.ipynb  配列の結合と分割.ipynb  配列の統計量計算(平均).ipynb  配列の統計量計算2(分散と標準偏差).ipynb
notebooks/matplotlib/: matplotlibの日本語か.ipynb  グラフと色のスタイル設定.ipynb  グラフのラベル設定.ipynb  グラフサイズの変更.ipynb  サブプロットの作成.ipynb  折れ線グラフの作成.ipynb  散布図の作成.ipynb  棒グラフの作成.ipynb  演習⑦.ipynb  演習⑧.ipynb  箱ひげ図.ipynb
notebooks/pandas/: クロス集計表.ipynb  グループ化と集計.ipynb  データの並び替え(ソート).ipynb  データの概要確認.ipynb  データの結合.ipynb  データの結合②concat.ipynb  データフレームの作成.ipynb  データ型の変換 カテゴリ型→数値型.ipynb  データ型の変換 数値型→数値型.ipynb  ピボットテーブル.ipynb  列の選択.ipynb  基本統計量の計算.ipynb  基本統計量の計算②.ipynb  新しい列の作成.ipynb  日付データの操作.ipynb  条件付きフィルタリング.ipynb  欠損値.ipynb  欠損値の削除.ipynb  欠損値の補完.ipynb  演習④.ipynb  演習⑤.ipynb  演習⑥.ipynb  行の選択.ipynb
notebooks/seaborn/: カウントプロットの作成.ipynb  ヒストグラムの作成.ipynb  ヒートマップの作成.ipynb  ペアプロットの作成.ipynb  可視化のカラーパレット設定.ipynb  可視化のテーマ設定.ipynb  折れ線グラフの作成.ipynb  散布図の作成.ipynb  棒グラフの作成.ipynb  演習⑨.ipynb  演習⑩.ipynb  箱ひげ図の作成.ipynb
results/: data_summary_report.txt
scripts/: setup_dev.py
src/: example_analysis.py  utils.py
